@@ -4,10 +4,10 @@
 WEB = /home/brandon/sites/rhodesmill/html/brandon/projects
 
 all: pyephem.html pyephem-manual.html
-web: $(WEB)/pyephem.html $(WEB)/pyephem-manual.html $(WEB)/pyephem.jpg
+web: $(WEB)/pyephem.html $(WEB)/pyephem-manual.html $(WEB)/pyephem-CHANGELOG
 
 $(WEB)/pyephem.html: pyephem.html
-	umask 022; cat pyephem.html > $@
+	umask 022; tidy -q pyephem.html > $@
 
 $(WEB)/pyephem-manual.html: pyephem-manual.html
 	umask 022; cp $< $@
@@ -18,7 +18,7 @@ pyephem-manual.html: premanual.html format.py
 #/var/www/manual.html: premanual.html format.py
 #	umask 022; cat $< | python ./format.py > $@
 
-$(WEB)/pyephem.jpg: pyephem.jpg
+$(WEB)/pyephem-CHANGELOG: ../CHANGELOG
 	umask 022; cat $< > $@
 
 $(WEB)/pyephem-$(VERSION).tar.gz: ../dist/pyephem-$(VERSION).tar.gz
